# halo

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  Dockerfile  Makefile  README.md  build.py  config.toml  data.json  index.html  index.xml  kb.json  knowledge.py  maintain.py  patch.py  requirements.txt  sitemap.xml
.github/workflows/: main.yml  website.yml
categories/: index.xml
content/: progress.md
layouts/: index.html
layouts/_default/: progress.html
misc/: gen-struct-checks.py
progress/: index.html
src/: .clang-format  .gitignore  CMakeLists.txt  Makefile  common.h  entrypoint.c  inlines.c  inlines.h  types.h  xboxkrnl.exe.def
src/halo/: shell_xbox.c
src/halo/cseries/: cseries.c
src/halo/cutscene/: cinematics.c
src/halo/game/: game.c  game_engine.c  game_time.c  players.c
src/halo/input/: input_xbox.c
src/halo/interface/: hud.c  player_ui.c  ui_widget.c  ui_widget_game_data_input_functions.c
src/halo/main/: main.c
src/halo/memory/: data.c
src/halo/render/: render.c
src/halo/saved_games/: game_state.c
static/: data.json
static/css/: extra.css
static/icons/: sources.txt
tags/: index.xml
toolchains/: clang.cmake
tools/: check_requirements.py  color.py  gen-build-info.py  knowledge.py  maintain.py  patch.py
website/: Dockerfile
website/layouts/: index.html
website/static/data/: ring.glb
